--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,14 @@ flutter:
     - assets/images/el-viento.jpg
     - assets/images/ponyo.jpg
     - assets/images/the-boys.jpeg
+    - assets/images/tangled.jpeg
+    - assets/images/zootopia.jpeg
+    - assets/images/brave.jpeg
+    - assets/images/frozen.jpg
+    - assets/images/luca.jpg
+    - assets/images/insideout2.png
+    - assets/images/up.jpg
+    - assets/images/encanto.jpg
+    - assets/images/turningred.jpg
+    - assets/images/onward.jpg
+    - assets/images/elio.jpeg
