--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,3 +37,4 @@ flutter:
     - assets/images/turningred.jpg
     - assets/images/onward.jpg
     - assets/images/elio.jpeg
+    - assets/images/background.jpg
