--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,3 +38,8 @@ flutter:
     - assets/images/onward.jpg
     - assets/images/elio.jpeg
     - assets/images/background.jpg
+    - assets/images/avatar.jpg
+    - assets/images/avatar2.jpg
+    - assets/images/ant-man.jpg
+    - assets/images/avenger-andgame.jpg
+    - assets/images/black-panter.jpg
